--- a/index.html
+++ b/index.html
@@ -6,9 +6,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="./assets/img/icon/digivice.png" type="image/x-icon">
-    <title>Digimon</title>
+    <title>DigiHome</title>
+    <!-- Google Font -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
     <!-- CDN Bootstrap CSS-->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
     <!-- Link CSS -->
     <link rel="stylesheet" href="./assets/css/style.css">
     <!-- Link Javascript -->
@@ -19,7 +24,8 @@
     <header>
         <nav class="navbar navbar-expand-lg">
             <div class="container-fluid">
-                <a class="navbar-brand" href="./index.html"><img src="./assets/img/title.webp" alt="Digimon" width="150rem"></a>
+                <a class="navbar-brand" href="./index.html"><img src="./assets/img/title.webp" alt="Digimon"
+                        width="150rem"></a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
                     aria-expanded="false" aria-label="Toggle navigation">
@@ -39,25 +45,52 @@
                                 Dropdown
                             </a>
                             <ul class="dropdown-menu">
-                                <li><a class="dropdown-item" href="#">Action</a></li>
-                                <li><a class="dropdown-item" href="#">Another action</a></li>
+                                <li><a class="dropdown-item" href="#" target="_blank">Action</a></li>
+                                <li><a class="dropdown-item" href="#" target="_blank">Another action</a></li>
                             </ul>
                         </li>
                     </ul>
                     <img src="./assets/img/izzy.gif" width="55rem" alt="" class="me-3">
-                    <form class="d-flex col-md-3" role="search">
-                        <input class="form-control me-3" type="search" placeholder="Busca este Digimon Izzy  :)">
-                        <button class="btn btn-lg btn-outline-primary btn-warning" type="submit"><strong>DigiBuscar</strong></button>
+                    <form class="d-flex col-md-4" role="search">
+                        <input class="form-control me-3" type="search" placeholder="Ej: Koromon">
+                        <button class="btn btn-lg btn-outline-primary btn-warning"
+                            type="submit"><strong>DigiBuscar</strong></button>
                     </form>
-                    
+
                 </div>
             </div>
         </nav>
     </header>
 
 
+    <main>
+        <div class="titulo">
+            <h1>DIGIMON-LIST</h1>
+        </div>
+
+
+        <table class="table table-striped">
+            <thead>
+                <tr class="title-table">
+                    <th scope="col">NAME</th>
+                    <th scope="col">IMAGE</th>
+                    <th scope="col">LEVEL</th>
+                </tr>
+            </thead>
+            <tbody id="contenido">
+                <tr>
+                    <td>Mark</td>
+                    <td>Otto</td>
+                    <td>@mdo</td>
+                </tr>
+            </tbody>
+        </table>
+    </main>
+
     <!-- CDN Bootstrap Javascript -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
+        crossorigin="anonymous"></script>
 </body>
 
 </html>
