--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 
     <main>
         <div class="titulo">
-            <h1>DIGIMON-LIST</h1>
+            <h1>DIGIMON-ROSTER</h1>
         </div>
 
 
