habilitacion de buscador por nombre

--- a/index.html
+++ b/index.html
@@ -55,8 +55,8 @@
                     </ul>
                     <img src="./assets/img/izzy.gif" width="55rem" alt="" class="me-3">
                     <form class="d-flex col-md-4" role="search">
-                        <input class="form-control me-3" type="search" placeholder="Ej: Koromon">
-                        <button id="buscar" class="btn btn-lg btn-outline-primary btn-warning"
+                        <input id="buscar" class="form-control me-3" type="search" placeholder="Ej: Koromon">
+                        <button class="btn btn-lg btn-outline-primary btn-warning"
                             type="button" onclick="digibuscar()"><strong>DigiBuscar</strong></button>
                     </form>
 
