diseño responsivo OK

--- a/index.html
+++ b/index.html
@@ -41,9 +41,7 @@
                         </li>
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
-                                aria-expanded="false">
-                                Ver por Niveles
-                            </a>
+                                aria-expanded="false">Ver por<br>Niveles</a>
                             <ul class="dropdown-menu">
                                 <li><a id="fresh" onclick="eggFilter()" class="dropdown-item" href="#" >Fresh</a></li>
                                 <li><a id="training" onclick="babyFilter()" class="dropdown-item" href="#" >In Training</a></li>
@@ -69,7 +67,7 @@
 
     <main>
         <div class="titulo">
-            <h1>DIGIMON-ROSTER</h1>
+            <h1 class="text-center">DIGIMON-ROSTER</h1>
         </div>
 
         <div id="carta"></div>
